Add Optics agent

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "apollo-server": "0.3.2",
+    "babel-preset-es2015": "^6.16.0",
     "body-parser": "1.15.2",
     "connect-session-knex": "1.2.0",
     "dataloader": "1.2.0",
@@ -52,10 +53,12 @@
     "graphql-tools": "0.7.2",
     "knex": "0.12.3",
     "lodash": "4.16.4",
+    "node-pre-gyp": "^0.6.30",
+    "optics-agent": "0.0.33",
     "passport": "0.3.2",
     "passport-github": "1.1.0",
     "request-promise": "4.1.1",
-    "sqlite3": "3.1.6",
+    "sqlite3": "^3.1.6",
     "subscriptions-transport-ws": "0.2.5"
   }
 }
